[init] deployment - healthcheck for resources
